--- a/jenkins-x-platform/requirements.yaml
+++ b/jenkins-x-platform/requirements.yaml
@@ -1,8 +1,8 @@
 dependencies:
 - condition: jenkins.enabled
   name: jenkins
-  repository: http://chartmuseum.jenkins-x.io
-  version: 0.10.38
+  repository: https://kubernetes-charts.storage.googleapis.com
+  version: 1.9.5 
 - alias: expose
   condition: expose.enabled
   name: exposecontroller
