--- a/jenkins-x-platform/values.yaml
+++ b/jenkins-x-platform/values.yaml
@@ -902,95 +902,36 @@ chartmuseumServiceLink:
 
 jenkins:
   enabled: true
-  # Default values for jenkins.
-  # This is a YAML-formatted file.
-  # Declare name/value pairs to be passed into your templates.
-  # name: value
-  Master:
-    Name: jenkins-master
-    # Image: "jenkinsci/jenkins"
-    # ImageTag: "2.89"
-    Image: "gcr.io/jenkinsxio/jenkinsx"
-    ImageTag: "0.0.81"
-    ImagePullPolicy: "IfNotPresent"
-    Component: "jenkins-master"
-    UseSecurity: true
-    AdminUser: admin
-    # AdminPassword: <defaults to random>
-    AdminPassword: admin
-    AuthorizationStrategyClass: "hudson.security.FullControlOnceLoggedInAuthorizationStrategy"
-    AuthorizationStrategyAttributes:
-    - name: 'denyAnonymousReadAccess'
-      value: 'true'
-    SecurityRealmClass: "hudson.security.LegacySecurityRealm"
-    SecurityRealmAttributes: {}
-    ServiceAccountAnnotations: {}
-    Cpu: "200m"
-    Memory: "256Mi"
-    # Set min/max heap here if needed with:
-    # JavaOpts: "-Xms512m -Xmx512m"
-    JavaOpts: >
+  master:
+    componentName: "jenkins-master"
+    image: "jenkinsci/jenkins"
+    tag: "2.211"
+    imagePullPolicy: "IfNotPresent"
+    useSecurity: true
+    adminUser: admin
+    adminPassword: admin
+    authorizationStrategy: |-
+      <authorizationStrategy class="hudson.security.FullControlOnceLoggedInAuthorizationStrategy">
+        <denyAnonymousReadAccess>true</denyAnonymousReadAccess>
+      </authorizationStrategy>
+    securityRealm: |-
+      <securityRealm class="hudson.security.LegacySecurityRealm"/>
+    javaOpts: >
       -Dhudson.slaves.NodeProvisioner.initialDelay=0
       -Dhudson.slaves.NodeProvisioner.MARGIN=50
       -Dhudson.slaves.NodeProvisioner.MARGIN0=0.85
       -Djenkins.displayurl.provider=org.jenkinsci.plugins.blueoceandisplayurl.BlueOceanDisplayURLImpl
-    # JenkinsOpts: ""
-    # JenkinsUriPrefix: "/jenkins"
-    ServicePort: 8080
-    # For minikube, set this to NodePort, elsewhere use LoadBalancer
-    # Use ClusterIP if your setup includes ingress controller
-    ServiceType: ClusterIP
-    # Master Service annotations
-    ServiceAnnotations:
-      #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
+    servicePort: 8080
+    serviceType: ClusterIP
+    serviceAnnotations:
+      # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
       fabric8.io/expose: "true"
       fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx\nnginx.ingress.kubernetes.io/proxy-body-size: 500m"
-    # Used to create Ingress record (should used with ServiceType: ClusterIP)
-    # HostName: jenkins.cluster.local
-    # NodePort: <to set explicitly, choose port between 30000-32767
-    ContainerPort: 8080
-    SlaveListenerPort: 50000
-    # LoadBalancerSourceRanges:
-    # - 0.0.0.0/0
-    # Optionally assign a known public LB IP
-    # LoadBalancerIP: 1.2.3.4
-    # Optionally configure a JMX port
-    # requires additional JavaOpts, ie
-    # JavaOpts: >
-    #   -Dcom.sun.management.jmxremote.port=4000
-    #   -Dcom.sun.management.jmxremote.authenticate=false
-    #   -Dcom.sun.management.jmxremote.ssl=false
-    # JMXPort: 4000
-    # Used to approve a list of groovy functions in pipelines used the script-security plugin. Can be viewed under /scriptApproval
-    # ScriptApproval:
-    #   - "method groovy.json.JsonSlurperClassic parseText java.lang.String"
-    #   - "new groovy.json.JsonSlurperClassic"
-    # List of groovy init scripts to be executed during Jenkins master start
-    InitScripts:
-    #  - |
-    #    print 'adding global pipeline libraries, register properties, bootstrap jobs...'
-    CustomConfigMap: false
-    # Node labels and tolerations for pod assignment
-    # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
-    # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
-    NodeSelector: {}
-    Tolerations: {}
+    slaveListenerPort: 50000
+    overwritePlugins: true 
+    overwriteConfig: true
 
-    Ingress:
-      Annotations:
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
-
-      TLS:
-      # - secretName: jenkins.cluster.local
-      #   hosts:
-      #     - jenkins.cluster.local
-
-    # Overwrite the base jenkins config and any plugins during upgrades
-    Overwrite:
-      Plugins: true
-      Config: true
-
+  # TODO: Deprecated configuration handled by platform itself, may change them later on thougout?
   Servers:
     BitbucketCloud:
     #- Name: myname
@@ -1023,20 +964,16 @@ jenkins:
         DOCKER_REGISTRY: ""
         TILLER_NAMESPACE: ""
 
-  Agent:
-    Enabled: true
+  agent:
+    enabled: true
+    componentName: "jenkins-agent"
+    containerCap: 0
 
-    Component: "jenkins-agent"
+    # Used in jenkins-x-platform templates
+    dockerHostPath: "/var/run/docker.sock"
+    dockerMountPath: "/var/run/docker.sock"
 
-    ContainerCap: 0
-
-    DockerHostPath: "/var/run/docker.sock"
-    DockerMountPath: "/var/run/docker.sock"
-
-    KubernetesServerURL: "https://kubernetes.default"
-
-    # Key Value selectors. Ex:
-    # jenkins-agent: v1
+    # TODO: Deprecated configuration handled by platform itself, may change them later on thougout?
     PodTemplates:
       aws-cdk:
         Name: aws-cdk
@@ -2358,48 +2295,23 @@ jenkins:
             Command: "/bin/sh -c"
             Args: "cat"
             Tty: true
-  Persistence:
-    Enabled: true
-    ## A manually managed Persistent Volume and Claim
-    ## Requires Persistence.Enabled: true
-    ## If defined, PVC must be created manually before volume will be bound
-    # ExistingClaim:
 
-    ## jenkins data Persistent Volume Storage Class
-    ## If defined, storageClassName: <storageClass>
-    ## If set to "-", storageClassName: "", which disables dynamic provisioning
-    ## If undefined (the default) or set to null, no storageClassName spec is
-    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-    ##   GKE, AWS & OpenStack)
-    ##
-    # StorageClass: "-"
+  persistence:
+    enabled: true
+    accessMode: "ReadWriteOnce"
+    size: "30Gi"
 
-    AccessMode: ReadWriteOnce
-    Size: 30Gi
-    volumes:
-    #  - name: nothing
-    #    emptyDir: {}
-    mounts:
-  #  - mountPath: /var/nothing
-  #    name: nothing
-  #    readOnly: true
+  networkPolicy:
+    enabled: false
+    apiVersion: extensions/v1beta1
 
-  NetworkPolicy:
-    # Enable creation of NetworkPolicy resources.
-    Enabled: false
-    # For Kubernetes v1.4, v1.5 and v1.6, use 'extensions/v1beta1'
-    # For Kubernetes v1.7, use 'networking.k8s.io/v1'
-    ApiVersion: extensions/v1beta1
-
-  ## Install Default RBAC roles and bindings
   rbac:
-    install: true
-    serviceAccountName: jenkins
-    # RBAC api version (currently either v1beta1 or v1alpha1)
-    apiVersion: v1beta1
-    # Cluster role reference
-    roleRef: cluster-admin
+    create: true
 
+  serviceAccount:
+    create: true
+    name: jenkins
+    annotations: {}
 
 PipelineSecrets:
   DockerConfig: "{}"
